[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Combat/Combat UI/CombatInterface.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Combat/Combat Action/BattleQueue.gd" type="Script" id=2]
[ext_resource path="res://assets/Textures/ForestBackground.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Combat/Combat.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Combat/Combat Action/Sorter.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Combat/Combat UI/CombatMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Combat/Combat UI/FighterSelection.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Combat/Combat UI/FighterDisplay.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/Combat/Combat UI/Marker.gd" type="Script" id=9]
[ext_resource path="res://assets/Textures/marker.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Combat/Combat UI/BattleLog.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Combat/Combat UI/BattleLog.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/Textures/Win.png" type="Texture" id=13]
[ext_resource path="res://assets/Textures/Lose.png" type="Texture" id=14]
[ext_resource path="res://Scripts/Combat/Combat Action/Battlefield.gd" type="Script" id=15]
[ext_resource path="res://Scripts/Combat/Combat Action/DamageCalculator.gd" type="Script" id=16]
[ext_resource path="res://Scripts/Combat/Combat Action/Field_Side.gd" type="Script" id=39]
[ext_resource path="res://Scripts/Combat/Combat UI/SpellInfo.gd" type="Script" id=57]
[ext_resource path="res://Scenes/Combat/Combat UI/SpellInfo.tscn" type="PackedScene" id=58]
[ext_resource path="res://Scenes/Combat/Combat UI/Info.tscn" type="PackedScene" id=59]

[node name="Combat" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CombatInterface" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 1 )

[node name="BattleLog" parent="CombatInterface" instance=ExtResource( 12 )]
margin_left = -651.0
margin_top = -471.0
script = ExtResource( 11 )

[node name="Display" parent="CombatInterface" instance=ExtResource( 8 )]

[node name="Selection" parent="CombatInterface" instance=ExtResource( 7 )]

[node name="Marker" type="TextureRect" parent="CombatInterface"]
visible = false
margin_left = 1671.04
margin_top = 8.63023
margin_right = 1721.04
margin_bottom = 58.6302
texture = ExtResource( 10 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleInfo" parent="CombatInterface" instance=ExtResource( 59 )]
visible = false

[node name="SpellInfo" parent="CombatInterface" instance=ExtResource( 58 )]
visible = false
script = ExtResource( 57 )

[node name="CombatMenu" parent="CombatInterface" instance=ExtResource( 6 )]
visible = false

[node name="Win" type="TextureRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Lose" type="TextureRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BattleQueue" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Sorter" type="Node" parent="BattleQueue"]
script = ExtResource( 5 )

[node name="DamageCalculator" type="Node" parent="BattleQueue"]
script = ExtResource( 16 )
DAMAGE_MODE = "RELATIVE"

[node name="Battlefield" type="Node" parent="BattleQueue"]
script = ExtResource( 15 )

[node name="Ally" type="Node" parent="BattleQueue/Battlefield"]
script = ExtResource( 39 )

[node name="Left" type="Node" parent="BattleQueue/Battlefield/Ally"]

[node name="Right" type="Node" parent="BattleQueue/Battlefield/Ally"]

[node name="Reserves" type="Node" parent="BattleQueue/Battlefield/Ally"]

[node name="Enemy" type="Node" parent="BattleQueue/Battlefield"]
script = ExtResource( 39 )

[node name="Left" type="Node" parent="BattleQueue/Battlefield/Enemy"]

[node name="Right" type="Node" parent="BattleQueue/Battlefield/Enemy"]

[node name="Reserves" type="Node" parent="BattleQueue/Battlefield/Enemy"]

[node name="Commanders" type="Node" parent="."]

[node name="AllyCommander" type="Node" parent="Commanders"]

[node name="EnemyCommander" type="Node" parent="Commanders"]

[connection signal="selected_replacement" from="CombatInterface/CombatMenu" to="." method="_selected_replacement"]
[connection signal="sorting_action_queue" from="BattleQueue/Sorter" to="BattleQueue" method="_on_Sorter_sorting_action_queue"]
